new/main.css
@import url("https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,700,800|Noto+Sans:400,400i,700|Heebo:100,300,400,500,700,800,900");

* {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

body {
  background-color: rgb(250, 250, 250);
  padding-bottom: 100px;
  animation: fadeIn 0.5s ease-out;
  transition: background-color 0.15s ease-in-out;
}

hr {
  transition: background-color 0.2s ease-in-out;
}

.topbar {
  background: linear-gradient(
    90deg,
    rgba(100, 79, 233, 1) 0%,
    rgba(110, 61, 187, 1) 100%
  );
  height: 10px;
  width: 100%;
}

nav {
  grid-area: nav;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 60px;
}

.navitem {
  margin-left: 10%;
  margin-right: 10%;
  font-family: Heebo, Helvetica, Arial, sans-serif;
  font-weight: 800;
  font-size: 28px;
  opacity: 0.3;
  transition: opacity linear 0.06s, transform ease-in-out 0.2s;
  cursor: default;
}

.navitem:not(.selected):hover {
  cursor: pointer;
  opacity: 1;
  transform: translateY(-5px);
  transition: cubic-bezier(0.13, 0.91, 0.37, 1) 0.2s;
}

.selected {
  opacity: 1;
}

.selected::after {
  display: block;
  font-family: "Courier New", Courier, monospace;
  opacity: 0.3;
  font-weight: 300;
  margin-bottom: -30px;
  margin-top: -8px;
  text-align: center;
  content: "^";
}

#dark-mode {
  width: 50px;
  height: 50px;
  display: block;
  cursor: pointer;
  margin: auto auto;
  grid-area: footer;
  margin-top: 100px;
  transform: rotate(40deg);
}

#content {
  margin: auto auto;
  display: grid;
  grid-template-areas:
    "header header header"
    "nav nav nav"
    "main main main"
    "footer footer footer";
  width: 100%;
  max-width: 1200px;
}

#heading {
  justify-self: center;
  grid-area: header;
  margin-top: 30px;
}

#dark-toggle {
  text-align: centerl;
  margin: auto auto;
  grid-area: footer;
  display: block;
  margin-top: 100px;
  transform: scale(0.8);
  width: 175px;
}

.splitter {
  grid-area: main;
  width: 70%;
  margin: auto auto;
  margin-top: 40px;
  border-color: rgb(207, 207, 207);
  background-color: rgb(207, 207, 207);
  color: rgb(207, 207, 207);
  height: 3px;
  border: 0;
}

.bottom {
  grid-area: footer;
  margin-top: 50px;
  transition: all 0.2s;
}

.noselect {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.section {
  opacity: 1;
  grid-area: main;
  width: 100%;
  margin: auto auto;
  margin-top: 100px;
  font-size: 18px;
  font-weight: 400;
  line-height: 36px;
  transition: opacity 0.25s ease-in-out;
}

#ctn-about {
  width: 70%;
}

#cards {
  margin: auto auto;
  display: flex;
  width: 100%;
  flex-flow: wrap;
  justify-content: center;
  flex-direction: row;
}

.card {
  max-width: 400px;
  margin: auto;
  display: grid;
  grid-template-areas:
    "icon"
    "desc";
  height: 300px;
  filter: drop-shadow(0 3px 2px #00000046);
  margin-bottom: 100px;
  margin-left: 50px;
  margin-right: 50px;
}

.icon {
  grid-area: icon;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Heebo", sans-serif;
  height: 120px;
  font-weight: 700;
  font-size: 28px;
  letter-spacing: 2px;
  color: whitesmoke;
  border: 0;
  border-radius: 8px 8px 0 0;
  transition: color 0.1s ease-out;
}

.desc {
  display: flex;
  align-items: center;
  flex-direction: column;
  grid-area: desc;
  background-color: rgb(240, 240, 240);
  border: 0;
  border-radius: 0 0 8px 8px;
  font-family: "Noto Sans", sans-serif;
  text-align: justify;
  text-justify: inter-word;
  line-height: 24px;
  font-size: 16px;
  padding: 30px;
}

.dark-desc {
  background-color: #333;
  color: whitesmoke;
}

.desc:first-child {
  z-index: 0;
}

.ctn-btn {
  margin-top: 30px;
}

#about-intro {
  font-weight: 600;
  font-family: "Heebo", sans-serif;
  font-size: 24px;
}

#about {
  font-family: "Noto Sans", sans-serif;
  text-align: justify;
  text-justify: inter-word;
  text-align-last: center;
}

#interested {
  margin-top: 40px;
  font-style: italic;
}

#resume {
  text-align: center;
  margin: auto auto;
  font-weight: 500;
  letter-spacing: 1.2px;
  margin-top: 35px;
}
.behance {
  background: linear-gradient(-45deg, #0a41a8b2, #2974ffc4);
  border-color: #2974ffc4 !important;
}

.youtube {
  background: linear-gradient(-45deg, #b90a0abb, #ff2929c5);
  border-color: #ff2929c5 !important;
}

.flickr {
  background: linear-gradient(-45deg, #4d0ab9c2, #db29ffb9);
  border-color: #8144d1c2 !important;
}

.soundcloud {
  background: linear-gradient(-45deg, #ff8800be, #fcc206cb);
  border-color: #ff8800be !important;
}

.github {
  background: linear-gradient(-45deg, #575757, #7e7e7e);
  border-color: #575757 !important;
}

.title {
  color: #222222;
  font-family: "Muli", sans-serif;
  font-weight: bolder;
  font-size: 100px;
  margin-bottom: 20px;
  z-index: 20;
}

.subtitle {
  font-family: "Noto Sans", sans-serif;
  font-weight: 200;
  font-size: 18px;
  margin-top: -35px;
  animation: fadeIn 0.3s ease-in;
  margin-left: 95px;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 100;
  }
}

@keyframes expand {
  from {
    width: 0%;
  }

  to {
    width: 100%;
  }
}

.subtitle:after {
  z-index: 0;
  bottom: 0;
  height: 100%;
  width: 25%;
  content: "";
  right: 20%;
  pointer-events: none;
}

.hide {
  display: none;
}

.center {
  width: 100%;
  text-align: center;
  display: inline-block;
  margin: auto auto;
  position: relative;
}

.tab {
  padding-left: 4em;
}

.btn {
  border-radius: 30px 30px;
  border-style: solid;
  border-color: #333;
  font-family: "Heebo";
  font-weight: 600;
  font-size: 16px;
  padding: 15px 35px 15px 35px;
  cursor: pointer;
  background: none;
  color: #222222;
  transition: linear 0.08s;
  outline: 0;
}

.dark-btn {
  color: whitesmoke;
}

.btn:hover {
  opacity: 0.5;
  transition: cubic-bezier(0.13, 0.91, 0.37, 1) 0.3s;
}

.fade {
  opacity: 0;
}

.btn-portfolio {
  z-index: 10;
  display: block;
  grid-area: desc;
  background: none;
  border-width: 2px;
  letter-spacing: 1.5px;
  font-weight: 500;
}

/* Responsive Rules */

@media only screen and (max-width: 800px) {
  #content {
    width: 100%;
  }

  #heading {
    text-align: center;
  }

  #about {
    max-width: 600px;
    align-self: center;
    margin: auto auto;
  }

  .title {
    font-size: 60px;
    margin: 30px 20px;
    margin-top: -10px;
    line-height: 65px;
  }

  .subtitle {
    text-align: center;
    margin: auto auto;
    font-size: 14px;
    width: 80%;
    margin-top: -20px;
  }

  .selected::after {
    content: "";
  }

  .navitem {
    font-size: 18px;
    border: 2px solid rgb(207, 207, 207);
    border-radius: 30px 30px;
    padding: 10px 20px 10px 20px;
    margin-left: 8%;
    margin-right: 8%;
  }

  nav {
    margin-top: 30px;
  }

  splitter {
    margin-top: 30px;
  }

  #ctn-about {
    width: 80%;
  }

  .section {
    font-size: 14px;
    line-height: 28px;
  }

  .desc {
    font-size: 16px;
    height: auto;
    border-radius: 0 0 8px 8px;
    padding: 20px;
    flex-direction: column;
    /* text-align-last: center; */
  }

  .desc > div {
    max-width: 330px;
  }

  .card {
    grid-template-areas:
      "icon"
      "desc";
    grid-template-columns: none;
    width: 100%;
    max-width: 420px;
    margin-top: 10px;
    max-height: none;
    height: auto;
  }

  #cards::first-child {
    margin-top: 20px;
  }
}

@media only screen and (max-width: 440px) {
  .desc {
    font-size: 14px;
  }
}

.dark-bg {
  background-color: #222;
}

.dark-text {
  color: whitesmoke;
}

.dark-hr {
  background-color: #555;
}

